____________________________________________

Zelda XD2: Mercuris Chess 1.0.4 (2017-04-06)
____________________________________________

* Add a statistics screen at the end (#52).
* Fix hearts not displayed in the savegame menu.
* Fix stuck after the fight against Zelda's cat (#54).
* Fix rupee island accessible without flippers (#67).
* Fix rupee island rupees invisible even with the lens of truth (#72).
* Fix running not inflicting twice damage (#77).
* Allow to enter the lost and found office from outside (#7).
* Add unbreakable vases in the vase house.
* Dungeon 1: reduce the boss fight duration (#78).
* Dungeon 1: improve throwing the iron ball.
* Dungeon 2 7F: fix black statues that should not move.
* Dungeon 2 3F: add a telepathic message joke (#64).
* Water house: fix pool limits.
* Slightly improve ending dialogs.
* Fix typos.
* Various minor improvements and bug fixes.

____________________________________________

Zelda XD2: Mercuris Chess 1.0.3 (2017-04-05)
____________________________________________

* Fix stuck when trying to use bananas but having none anymore (#53).
* Fix rupee and heart counter changing too quickly.
* Fix minor tile issue in Chill Valley bath (#51).
* Fix typos in dialogs.

____________________________________________

Zelda XD2: Mercuris Chess 1.0.2 (2017-04-04)
____________________________________________

* Fix Zelda mail not working the second time.
* Minor dialog improvements.

____________________________________________

Zelda XD2: Mercuris Chess 1.0.1 (2017-04-04)
____________________________________________

* Fix duplicated menus after game-over (#2).
* Make karts hurt the hero and react to bananas (#36).
* Allow to use the lens of truth in water and some other states (#48).
* Move the piece of heart from the forest to the freaking cave (#40).
* Fix stuck in a wall after diagonal jump in Chill Valley.
* Fix stuck in dungeon 2 2F if wallmaster is killed (#16).
* Fix stuck in the final scene when going to the left (#46).